change the mongodb_demo file

--- a/notebook/MongoDB_demo.ipynb
+++ b/notebook/MongoDB_demo.ipynb
@@ -170,13 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "DB_NAME = \"Proj1\"\n",
     "COLLECTION_NAME = \"Proj1-Data\"\n",
-    "CONNECTION_URL = \"mongodb+srv://sahpranav025:gkPYvpsZNWgEhnEi@cluster0.riwwe.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
+    "CONNECTION_URL = \"mongodb+srv://<username>:<password>@cluster0.riwwe.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\"\n",
     "\n",
     "# above, either remove your credentials or delete the mongoDB resource bofore pushing it to github."
    ]
